--- a/.github/workflows/main_csuinternetaccess.yml
+++ b/.github/workflows/main_csuinternetaccess.yml
@@ -32,6 +32,13 @@ jobs:
         with:
           name: node-app
           path: .
+          
+      - name: 'Deploy to Azure WebApp'
+        uses: azure/webapps-deploy@v2
+        with: 
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
   deploy:
     runs-on: ubuntu-latest
